chore: connect Overleaf

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -123,7 +123,7 @@
 % \end{tabular*}
 
 \begin{center}
-    {\Huge \scshape First Last} \\ \vspace{1pt}
+    {\Huge \scshape Aashish Kumar} \\ \vspace{1pt}
     123 Street Name, Town, State 12345 \\ \vspace{1pt}
     \small \raisebox{-0.1\height}\faPhone\ 123-456-7890 ~ \href{mailto:x@gmail.com}{\raisebox{-0.2\height}\faEnvelope\  \underline{email@gmail.com}} ~ 
     \href{https://linkedin.com/in//}{\raisebox{-0.2\height}\faLinkedin\ \underline{linkedin.com/in/username}}  ~
