update: modify education details

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -136,8 +136,8 @@
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {State University}{Sep. 2017 -- May 2021}
-      {Bachelor of Science in Computer Science}{City, State}
+      {Indian Institute of Technology}{Graduation: Jun 2023}
+      {Dual Degree, CGPA: 8.52/10}{Kharagpur}
   \resumeSubHeadingListEnd
 
 %------RELEVANT COURSEWORK-------
