docs: update education section with degree details and date format

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -136,8 +136,8 @@
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Indian Institute of Technology}{Graduation: Jun 2023}
-      {Dual Degree, CGPA: 8.52/10}{Kharagpur}
+      {Indian Institute of Technology}{Jun 2018 -- May 2023}
+      {Dual Degree (B.Tech & M.Tech), CGPA: 8.52/10}{Kharagpur}
   \resumeSubHeadingListEnd
 
 %------RELEVANT COURSEWORK-------
