--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -137,7 +137,7 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Indian Institute of Technology}{Jun 2018 -- May 2023}
-      {Dual Degree (B.Tech & M.Tech), CGPA: 8.52/10}{Kharagpur}
+      {Dual Degree (B.Tech \& M.Tech), CGPA: 8.52/10}{Kharagpur}
   \resumeSubHeadingListEnd
 
 %------RELEVANT COURSEWORK-------
