chore: update contact information and social media links in resume header

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -124,10 +124,9 @@
 
 \begin{center}
     {\Huge \scshape Aashish Kumar} \\ \vspace{1pt}
-    123 Street Name, Town, State 12345 \\ \vspace{1pt}
-    \small \raisebox{-0.1\height}\faPhone\ 123-456-7890 ~ \href{mailto:x@gmail.com}{\raisebox{-0.2\height}\faEnvelope\  \underline{email@gmail.com}} ~ 
-    \href{https://linkedin.com/in//}{\raisebox{-0.2\height}\faLinkedin\ \underline{linkedin.com/in/username}}  ~
-    \href{https://github.com/}{\raisebox{-0.2\height}\faGithub\ \underline{github.com/username}}
+    \small \raisebox{-0.1\height}\faPhone\ +918084662242 ~ \href{mailto:aashishkr.iitkgp@gmail.com}{\raisebox{-0.2\height}\faEnvelope\  \underline{aashishkr.iitkgp@gmail.com}} ~ 
+    \href{https://www.linkedin.com/in/kr-aashish/}{\raisebox{-0.2\height}\faLinkedin\ \underline{linkedin.com/in/kr-aashish}}  ~
+    \href{https://github.com/kr-aashish}{\raisebox{-0.2\height}\faGithub\ \underline{github.com/kr-aashish}}
     \vspace{-8pt}
 \end{center}
 
