--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -142,16 +142,14 @@
 %------RELEVANT COURSEWORK-------
 \section{Relevant Coursework}
     %\resumeSubHeadingListStart
-        \begin{multicols}{4}
+        \begin{multicols}{3}
             \begin{itemize}[itemsep=-5pt, parsep=3pt]
-                \item\small Data Structures
-                \item Software Methodology
-                \item Algorithms Analysis
-                \item Database Management
-                \item Artificial Intelligence
-                \item Internet Technology
-                \item Systems Programming
-                \item Computer Architecture
+                \item\small Programming \& Data Structures
+                \item Algorithms 1
+                \item Probability and Statistics
+                \item Data Analytics
+                \item Machine Learning Foundations and Applications
+                \item Deep Learning Foundations and Applications
             \end{itemize}
         \end{multicols}
         \vspace*{2.0\multicolsep}
