feat: add new coursework and update column layout from 3 to 4 columns

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -142,7 +142,7 @@
 %------RELEVANT COURSEWORK-------
 \section{Relevant Coursework}
     %\resumeSubHeadingListStart
-        \begin{multicols}{3}
+        \begin{multicols}{4}
             \begin{itemize}[itemsep=-5pt, parsep=3pt]
                 \item\small Programming \& Data Structures
                 \item Algorithms 1
@@ -150,6 +150,12 @@
                 \item Data Analytics
                 \item Machine Learning Foundations and Applications
                 \item Deep Learning Foundations and Applications
+                \item Applied Algorithms and Data Structures | AlgoZenith
+                \item AlgoExpert | algoexpert.io
+                \item FrontendExpert | algoexpert.io
+                \item SystemsExpert | algoexpert.io
+                \item InfraExpert | algoexpert.io
+                \item Winter School of AI \& Robotics | Robotix Society, IEEE
             \end{itemize}
         \end{multicols}
         \vspace*{2.0\multicolsep}
