--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -139,27 +139,17 @@
       {Dual Degree (B.Tech \& M.Tech), CGPA: 8.52/10}{Kharagpur}
   \resumeSubHeadingListEnd
 
-%------RELEVANT COURSEWORK-------
-\section{Relevant Coursework}
-    %\resumeSubHeadingListStart
-        \begin{multicols}{4}
-            \begin{itemize}[itemsep=-5pt, parsep=3pt]
-                \item\small Programming \& Data Structures
-                \item Algorithms 1
-                \item Probability and Statistics
-                \item Data Analytics
-                \item Machine Learning Foundations and Applications
-                \item Deep Learning Foundations and Applications
-                \item Applied Algorithms and Data Structures | AlgoZenith
-                \item AlgoExpert | algoexpert.io
-                \item FrontendExpert | algoexpert.io
-                \item SystemsExpert | algoexpert.io
-                \item InfraExpert | algoexpert.io
-                \item Winter School of AI \& Robotics | Robotix Society, IEEE
-            \end{itemize}
-        \end{multicols}
-        \vspace*{2.0\multicolsep}
-    %\resumeSubHeadingListEnd
+
+%-----------PROGRAMMING SKILLS-----------
+\section{Technical Skills}
+ \begin{itemize}[leftmargin=0.15in, label={}]
+    \small{\item{
+     \textbf{Languages}{: Python, Java, C, HTML/CSS, JavaScript, SQL} \\
+     \textbf{Developer Tools}{: VS Code, Eclipse, Google Cloud Platform, Android Studio} \\
+     \textbf{Technologies/Frameworks}{: Linux, Jenkins, GitHub, JUnit, WordPress} \\
+    }}
+ \end{itemize}
+ \vspace{-16pt}
 
 
 %-----------EXPERIENCE-----------
@@ -188,6 +178,7 @@
     
   \resumeSubHeadingListEnd
 \vspace{-16pt}
+
 
 %-----------PROJECTS-----------
 \section{Projects}
@@ -221,17 +212,27 @@
 \vspace{-15pt}
 
 
-%
-%-----------PROGRAMMING SKILLS-----------
-\section{Technical Skills}
- \begin{itemize}[leftmargin=0.15in, label={}]
-    \small{\item{
-     \textbf{Languages}{: Python, Java, C, HTML/CSS, JavaScript, SQL} \\
-     \textbf{Developer Tools}{: VS Code, Eclipse, Google Cloud Platform, Android Studio} \\
-     \textbf{Technologies/Frameworks}{: Linux, Jenkins, GitHub, JUnit, WordPress} \\
-    }}
- \end{itemize}
- \vspace{-16pt}
+%------RELEVANT COURSEWORK-------
+\section{Coursework \& Certifications}
+    %\resumeSubHeadingListStart
+        \begin{multicols}{3}
+            \begin{itemize}[itemsep=-5pt, parsep=3pt]
+                \item Programming \& Data Structures
+                \item Algorithms 1
+                \item Applied Algorithms and DS
+                \item Probability and Statistics
+                \item Data Analytics
+                \item Machine Learning Foundations
+                \item Deep Learning Foundations
+                \item Winter School of AI \& Robotics
+                \item AlgoExpert algoexpert.io
+                \item FrontendExpert algoexpert.io
+                \item SystemsExpert algoexpert.io
+                \item InfraExpert algoexpert.io
+            \end{itemize}
+        \end{multicols}
+        \vspace*{2.0\multicolsep}
+    %\resumeSubHeadingListEnd
 
 
 %-----------INVOLVEMENT---------------
