--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -142,13 +142,38 @@
 
 %-----------PROGRAMMING SKILLS-----------
 \section{Technical Skills}
- \begin{itemize}[leftmargin=0.15in, label={}]
-    \small{\item{
-     \textbf{Languages}{: Python, Java, C, HTML/CSS, JavaScript, SQL} \\
-     \textbf{Developer Tools}{: VS Code, Eclipse, Google Cloud Platform, Android Studio} \\
-     \textbf{Technologies/Frameworks}{: Linux, Jenkins, GitHub, JUnit, WordPress} \\
-    }}
- \end{itemize}
+ \begin{multicols}{2}
+ \small{
+  \textbf{Programming Languages} \\
+  C++ • Java • Golang • Python \\
+  JavaScript • TypeScript \\
+  \\
+  \textbf{Markup/Query Languages} \\
+  HTML5 • CSS3 • T‐SQL • pgSQL \\
+  \\
+  \textbf{Frameworks \& ORMs} \\
+  Spring Boot • Gin • Node.js • Flask \\
+  jOOQ • Mongoose • Prisma • Gorm \\
+  \\
+  \textbf{Libraries} \\
+  React.js • Jest • Joi • SuperTest • Colly \\
+  \\
+ }
+ \columnbreak
+ \small{
+  \textbf{Databases} \\
+  Redis • MongoDB • DynamoDB \\
+  Elasticsearch • SQLite • SQL Server \\
+  PostgreSQL • pgvector \\
+  \\
+  \textbf{Cloud} \\
+  AWS S3 • EC2 • RDS • CloudWatch \\
+  Lambda • SNS • SQS • SES • ECS \\
+  Docker • IIS • Nginx • GitHub Actions \\
+  Azure CI/CD • Deployment Groups \\
+  \\
+ }
+ \end{multicols}
  \vspace{-16pt}
 
 
