style: improve resume formatting by adjusting spacing and removing small caps

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -123,7 +123,7 @@
 % \end{tabular*}
 
 \begin{center}
-    {\Huge \scshape Aashish Kumar} \\ \vspace{1pt}
+    {\Huge Aashish Kumar} \\ \vspace{1pt}
     \small \raisebox{-0.1\height}\faPhone\ +918084662242 ~ \href{mailto:aashishkr.iitkgp@gmail.com}{\raisebox{-0.2\height}\faEnvelope\  \underline{aashishkr.iitkgp@gmail.com}} ~ 
     \href{https://www.linkedin.com/in/kr-aashish/}{\raisebox{-0.2\height}\faLinkedin\ \underline{linkedin.com/in/kr-aashish}}  ~
     \href{https://github.com/kr-aashish}{\raisebox{-0.2\height}\faGithub\ \underline{github.com/kr-aashish}}
@@ -146,32 +146,36 @@
  \small{
   \textbf{Programming Languages} \\
   C++ • Java • Golang • Python \\
-  JavaScript • TypeScript \\
-  \\
+  JavaScript • TypeScript
+  
+  \vspace{0.5em}
   \textbf{Markup/Query Languages} \\
-  HTML5 • CSS3 • T‐SQL • pgSQL \\
-  \\
+  HTML5 • CSS3 • T‐SQL • pgSQL
+  
+  \vspace{0.5em}
   \textbf{Frameworks \& ORMs} \\
   Spring Boot • Gin • Node.js • Flask \\
-  jOOQ • Mongoose • Prisma • Gorm \\
-  \\
+  jOOQ • Mongoose • Prisma • Gorm
+  
+  \vspace{0.5em}
   \textbf{Libraries} \\
-  React.js • Jest • Joi • SuperTest • Colly \\
-  \\
+  React.js • Jest • Joi • SuperTest • Colly
+  
  }
  \columnbreak
  \small{
   \textbf{Databases} \\
   Redis • MongoDB • DynamoDB \\
   Elasticsearch • SQLite • SQL Server \\
-  PostgreSQL • pgvector \\
-  \\
+  PostgreSQL • pgvector
+  
+  \vspace{0.5em}
   \textbf{Cloud} \\
   AWS S3 • EC2 • RDS • CloudWatch \\
   Lambda • SNS • SQS • SES • ECS \\
   Docker • IIS • Nginx • GitHub Actions \\
-  Azure CI/CD • Deployment Groups \\
-  \\
+  Azure CI/CD • Deployment Groups
+  
  }
  \end{multicols}
  \vspace{-16pt}
