--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -123,7 +123,7 @@
 % \end{tabular*}
 
 \begin{center}
-    {\Huge Aashish Kumar} \\ \vspace{1pt}
+    {\Huge \scshape Aashish Kumar} \\ \vspace{1pt}
     \small \raisebox{-0.1\height}\faPhone\ +918084662242 ~ \href{mailto:aashishkr.iitkgp@gmail.com}{\raisebox{-0.2\height}\faEnvelope\  \underline{aashishkr.iitkgp@gmail.com}} ~ 
     \href{https://www.linkedin.com/in/kr-aashish/}{\raisebox{-0.2\height}\faLinkedin\ \underline{linkedin.com/in/kr-aashish}}  ~
     \href{https://github.com/kr-aashish}{\raisebox{-0.2\height}\faGithub\ \underline{github.com/kr-aashish}}
@@ -142,42 +142,16 @@
 
 %-----------PROGRAMMING SKILLS-----------
 \section{Technical Skills}
- \begin{multicols}{2}
- \small{
-  \textbf{Programming Languages} \\
-  C++ • Java • Golang • Python \\
-  JavaScript • TypeScript
-  
-  \vspace{0.5em}
-  \textbf{Markup/Query Languages} \\
-  HTML5 • CSS3 • T‐SQL • pgSQL
-  
-  \vspace{0.5em}
-  \textbf{Frameworks \& ORMs} \\
-  Spring Boot • Gin • Node.js • Flask \\
-  jOOQ • Mongoose • Prisma • Gorm
-  
-  \vspace{0.5em}
-  \textbf{Libraries} \\
-  React.js • Jest • Joi • SuperTest • Colly
-  
- }
- \columnbreak
- \small{
-  \textbf{Databases} \\
-  Redis • MongoDB • DynamoDB \\
-  Elasticsearch • SQLite • SQL Server \\
-  PostgreSQL • pgvector
-  
-  \vspace{0.5em}
-  \textbf{Cloud} \\
-  AWS S3 • EC2 • RDS • CloudWatch \\
-  Lambda • SNS • SQS • SES • ECS \\
-  Docker • IIS • Nginx • GitHub Actions \\
-  Azure CI/CD • Deployment Groups
-  
- }
- \end{multicols}
+ \begin{itemize}[leftmargin=0.15in, label={}]
+    \small{\item{
+     \textbf{Programming Languages}{: C++ • Java • Golang • Python • JavaScript • TypeScript} \\
+     \textbf{Markup/Query Languages}{: HTML5 • CSS3 • T‐SQL • pgSQL} \\
+     \textbf{Frameworks \& ORMs}{: Spring Boot • Gin • Node.js • Flask • jOOQ • Mongoose • Prisma • Gorm} \\
+     \textbf{Libraries}{: React.js • Jest • Joi • SuperTest • Colly} \\
+     \textbf{Databases}{: Redis • MongoDB • DynamoDB • Elasticsearch • SQLite • SQL Server • PostgreSQL • pgvector} \\
+     \textbf{Cloud}{: AWS S3 • EC2 • RDS • CloudWatch • Lambda • SNS • SQS • SES • ECS • Docker • IIS • Nginx • GitHub Actions • Azure CI/CD • Deployment Groups} \\
+    }}
+ \end{itemize}
  \vspace{-16pt}
 
 
