--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -144,12 +144,12 @@
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Programming Languages}{: C++ • Java • Golang • Python • JavaScript • TypeScript} \\
-     \textbf{Markup/Query Languages}{: HTML5 • CSS3 • T‐SQL • pgSQL} \\
-     \textbf{Frameworks \& ORMs}{: Spring Boot • Gin • Node.js • Flask • jOOQ • Mongoose • Prisma • Gorm} \\
-     \textbf{Libraries}{: React.js • Jest • Joi • SuperTest • Colly} \\
-     \textbf{Databases}{: Redis • MongoDB • DynamoDB • Elasticsearch • SQLite • SQL Server • PostgreSQL • pgvector} \\
-     \textbf{Cloud}{: AWS S3 • EC2 • RDS • CloudWatch • Lambda • SNS • SQS • SES • ECS • Docker • IIS • Nginx • GitHub Actions • Azure CI/CD • Deployment Groups} \\
+     \textbf{Programming Languages}{: C++, Java, Golang, Python, JavaScript, TypeScript} \\
+     \textbf{Markup/Query Languages}{: HTML5, CSS3, T‐SQL, pgSQL} \\
+     \textbf{Frameworks \& ORMs}{: Spring Boot, Gin, Node.js, Flask, jOOQ, Mongoose, Prisma, Gorm} \\
+     \textbf{Libraries}{: React.js, Jest, Joi, SuperTest, Colly} \\
+     \textbf{Databases}{: Redis, MongoDB, DynamoDB, Elasticsearch, SQLite, SQL Server, PostgreSQL, pgvector} \\
+     \textbf{Cloud}{: AWS S3, EC2, RDS, CloudWatch, Lambda, SNS, SQS, SES, ECS, Docker, IIS, Nginx, GitHub Actions, Azure CI/CD, Deployment Groups} \\
     }}
  \end{itemize}
  \vspace{-16pt}
