refactor: redefine resume section's structure

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -147,9 +147,9 @@
      \textbf{Programming Languages}{: C++, Java, Golang, Python, JavaScript, TypeScript} \\
      \textbf{Markup/Query Languages}{: HTML5, CSS3, T‐SQL, pgSQL} \\
      \textbf{Frameworks \& ORMs}{: Spring Boot, Gin, Node.js, Flask, jOOQ, Mongoose, Prisma, Gorm} \\
-     \textbf{Libraries}{: React.js, Jest, Joi, SuperTest, Colly} \\
+     % \textbf{Libraries}{: React.js, Jest, Joi, SuperTest, Colly} \\
      \textbf{Databases}{: Redis, MongoDB, DynamoDB, Elasticsearch, SQLite, SQL Server, PostgreSQL, pgvector} \\
-     \textbf{Cloud}{: AWS S3, EC2, RDS, CloudWatch, Lambda, SNS, SQS, SES, ECS, Docker, IIS, Nginx, GitHub Actions, Azure CI/CD, Deployment Groups} \\
+     \textbf{Cloud}{: S3, EC2, RDS, CloudWatch, Lambda, SNS, SQS, SES, ECS, Docker, IIS, Nginx, GitHub Actions, Azure CI/CD} \\
     }}
  \end{itemize}
  \vspace{-16pt}
@@ -163,10 +163,10 @@
       {Electronics Company}{May 2020 -- August 2020}
       {Software Engineer Intern}{City, State}
       \resumeItemListStart
-        \resumeItem{Developed a service to automatically perform a set of unit tests daily on a product in development in order to decrease time needed for team members to identify and fix bugs/issues.}
-        \resumeItem{Incorporated scripts using Python and PowerShell to aggregate XML test results into an organized format and to load the latest build code onto the hardware, so that daily testing can be performed.}
-        \resumeItem{Utilized Jenkins to provide a continuous integration service in order to automate the entire process of loading the latest build code and test files, running the tests, and generating a report of the results once per day.}
-        \resumeItem{Explored ways to visualize and send a daily report of test results to team members  using HTML, Javascript, and CSS.}
+        \resumeItem{Assisted in development of the front end of a mobile application for iOS/Android using Dart and the Flutter framework.}
+        \resumeItem{Worked with Google Firebase to manage user inputted data across multiple platforms including web and mobile apps.}
+        \resumeItem{Collaborated with team members using version control systems such as Git to organize modifications and assign tasks.}
+        \resumeItem{Utilized Android Studio as a development environment in order to visualize the application in both iOS and Android.}
       \resumeItemListEnd
 
     \resumeSubheading
@@ -177,6 +177,13 @@
         \resumeItem{Worked with Google Firebase to manage user inputted data across multiple platforms including web and mobile apps.}
         \resumeItem{Collaborated with team members using version control systems such as Git to organize modifications and assign tasks.}
         \resumeItem{Utilized Android Studio as a development environment in order to visualize the application in both iOS and Android.}
+    \resumeItemListEnd
+
+    \resumeSubheading{Fraternity}{Spring 2020 -- Present}{President}{University Name}
+      \resumeItemListStart
+        \resumeItem{Achieved a 4 star fraternity ranking by the Office of Fraternity and Sorority Affairs (highest possible ranking).}
+        \resumeItem{Managed executive board of 5 members and ran weekly meetings to oversee progress in essential parts of the chapter.}
+        \resumeItem{Led chapter of 30+ members to work towards goals that improve and promote community service, academics, and unity.}
     \resumeItemListEnd
     
   \resumeSubHeadingListEnd
@@ -217,7 +224,6 @@
 
 %------RELEVANT COURSEWORK-------
 \section{Coursework \& Certifications}
-    %\resumeSubHeadingListStart
         \begin{multicols}{3}
             \begin{itemize}[itemsep=-5pt, parsep=3pt]
                 \item Programming \& Data Structures
@@ -234,21 +240,5 @@
                 \item InfraExpert algoexpert.io
             \end{itemize}
         \end{multicols}
-        \vspace*{2.0\multicolsep}
-    %\resumeSubHeadingListEnd
-
-
-%-----------INVOLVEMENT---------------
-\section{Leadership / Extracurricular}
-    \resumeSubHeadingListStart
-        \resumeSubheading{Fraternity}{Spring 2020 -- Present}{President}{University Name}
-            \resumeItemListStart
-                \resumeItem{Achieved a 4 star fraternity ranking by the Office of Fraternity and Sorority Affairs (highest possible ranking).}
-                \resumeItem{Managed executive board of 5 members and ran weekly meetings to oversee progress in essential parts of the chapter.}
-                \resumeItem{Led chapter of 30+ members to work towards goals that improve and promote community service, academics, and unity.}
-            \resumeItemListEnd
-        
-    \resumeSubHeadingListEnd
-
 
 \end{document}
