Updates from Overleaf

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -48,7 +48,7 @@
 \addtolength{\evensidemargin}{-0.5in}
 \addtolength{\textwidth}{1.19in}
 \addtolength{\topmargin}{-.7in}
-\addtolength{\textheight}{1.4in}
+\addtolength{\textheight}{1.5in}
 
 \urlstyle{same}
 
@@ -183,6 +183,7 @@
       \resumeItemListStart
         \resumeItem{Achieved a 4 star fraternity ranking by the Office of Fraternity and Sorority Affairs (highest possible ranking).}
         \resumeItem{Managed executive board of 5 members and ran weekly meetings to oversee progress in essential parts of the chapter.}
+        \resumeItem{Led chapter of 30+ members to work towards goals that improve and promote community service, academics, and unity.}
         \resumeItem{Led chapter of 30+ members to work towards goals that improve and promote community service, academics, and unity.}
     \resumeItemListEnd
     
