--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -48,7 +48,7 @@
 \addtolength{\evensidemargin}{-0.5in}
 \addtolength{\textwidth}{1.19in}
 \addtolength{\topmargin}{-.7in}
-\addtolength{\textheight}{1.5in}
+\addtolength{\textheight}{1.7in}
 
 \urlstyle{same}
 
@@ -167,6 +167,7 @@
         \resumeItem{Worked with Google Firebase to manage user inputted data across multiple platforms including web and mobile apps.}
         \resumeItem{Collaborated with team members using version control systems such as Git to organize modifications and assign tasks.}
         \resumeItem{Utilized Android Studio as a development environment in order to visualize the application in both iOS and Android.}
+        \resumeItem{Led chapter of 30+ members to work towards goals that improve and promote community service, academics, and unity.}
       \resumeItemListEnd
 
     \resumeSubheading
@@ -177,13 +178,13 @@
         \resumeItem{Worked with Google Firebase to manage user inputted data across multiple platforms including web and mobile apps.}
         \resumeItem{Collaborated with team members using version control systems such as Git to organize modifications and assign tasks.}
         \resumeItem{Utilized Android Studio as a development environment in order to visualize the application in both iOS and Android.}
+        \resumeItem{Utilized Android Studio as a development environment in order to visualize the application in both iOS and Android.}
     \resumeItemListEnd
 
     \resumeSubheading{Fraternity}{Spring 2020 -- Present}{President}{University Name}
       \resumeItemListStart
         \resumeItem{Achieved a 4 star fraternity ranking by the Office of Fraternity and Sorority Affairs (highest possible ranking).}
         \resumeItem{Managed executive board of 5 members and ran weekly meetings to oversee progress in essential parts of the chapter.}
-        \resumeItem{Led chapter of 30+ members to work towards goals that improve and promote community service, academics, and unity.}
         \resumeItem{Led chapter of 30+ members to work towards goals that improve and promote community service, academics, and unity.}
     \resumeItemListEnd
     
@@ -198,7 +199,6 @@
       \resumeProjectHeading
           {\textbf{Gym Reservation Bot} $|$ \emph{Python, Selenium, Google Cloud Console}}{January 2021}
           \resumeItemListStart
-            \resumeItem{Developed an automatic bot using Python and Google Cloud Console to register myself for a timeslot at my school gym.}
             \resumeItem{Implemented Selenium to create an instance of Chrome in order to interact with the correct elements of the web page.}
             \resumeItem{Created a Linux virtual machine to run on Google Cloud so that the program is able to run everyday from the cloud.}
             \resumeItem{Used Cron to schedule the program to execute automatically at 11 AM every morning so a reservation is made for me.}
