--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -213,7 +213,7 @@
           \resumeItemListEnd
           \vspace{-13pt}
       \resumeProjectHeading
-          {\textbf{Aranpani} $|$ \href{https://github.com/kr-aashish}{\emph{OpenAPI Docs}} \textit{-- Fundraiser Management System}}{Nov 2023 -- Dec 2023}
+          {\textbf{Aranpani} $|$ \href{https://github.com/kr-aashish}{\emph{OpenAPI Docs}} \textit{Fundraiser Management System}}{Nov 2023 -- Dec 2023}
           \resumeItemListStart
             \resumeItem{Modeled project, donor \& payment endpoints, with JWT auth, serializer, Joi validation middleware layers, adopted S3 pre-signed URLs for media uploads}
             \resumeItem{Penned UTs for models \& controllers and acceptance test suites for the API endpoints, maintaining a 90\% above code coverage, with Jest and SuperTest}
@@ -235,10 +235,10 @@
                 \item Machine Learning Foundations
                 \item Deep Learning Foundations
                 \item Winter School of AI \& Robotics
-                \item AlgoExpert algoexpert.io
-                \item FrontendExpert algoexpert.io
-                \item SystemsExpert algoexpert.io
-                \item InfraExpert algoexpert.io
+                \item AlgoExpert $|$ algoexpert.io
+                \item FrontendExpert $|$ algoexpert.io
+                \item SystemsExpert $|$ algoexpert.io
+                \item InfraExpert $|$ algoexpert.io
             \end{itemize}
         \end{multicols}
 
