--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -135,7 +135,7 @@
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Indian Institute of Technology}{Jun 2018 -- May 2023}
+      {Indian Institute of Technology Kharagpur}{Jun 2018 -- May 2023}
       {Dual Degree (B.Tech \& M.Tech), CGPA: 8.52/10}{Kharagpur}
   \resumeSubHeadingListEnd
 
@@ -197,7 +197,7 @@
     \vspace{-5pt}
     \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{Jira 2.0} $|$ \textit{Autonomous Project Management Suite} $|$ \href{https://github.com/kr-aashish}{\emph{View System Design}}}{Apr 2024 -- Jun 2024}
+          {\textbf{Jira 2.0} $|$ \textit{Autonomous Project Management Suite} $|$ \href{https://github.com/kr-aashish}{View System Design}}{Apr 2024 -- Jun 2024}
           \resumeItemListStart
             \resumeItem{Crafted a Lambda which triggers upon the project's FRD upload into S3, and creates user stories and tasks by leveraging Llama3 running in a private EC2}
             \resumeItem{Facilitated Event Bridge to consume Slack messages periodically, then used the LLM through Flask APIs to compile task's status and assignment updates}
@@ -205,7 +205,7 @@
           \resumeItemListEnd
           \vspace{-13pt}
       \resumeProjectHeading
-          {\textbf{DeployX} $|$ \textit{UI Deployment Automation} $|$ \href{https://github.com/kr-aashish}{\emph{Design Reference}}}{Jan 2024 -- Mar 2024}
+          {\textbf{DeployX} $|$ \textit{UI Deployment Automation} $|$ \href{https://github.com/kr-aashish}{Design Reference}}{Jan 2024 -- Mar 2024}
           \resumeItemListStart
             \resumeItem{Built an API server with a private RDS, which queues build jobs, and streams logs to Kafka for ingesting into ClickHouse, accessible as a polling endpoint}
             \resumeItem{Provisioned an auto-scaled ECS cluster, which runs an ECR image in Fargate, to process the build job for the given codebase, and dump the artifacts to S3}
@@ -213,7 +213,7 @@
           \resumeItemListEnd
           \vspace{-13pt}
       \resumeProjectHeading
-          {\textbf{Aranpani} $|$ \textit{Fundraiser Management System} $|$ \href{https://github.com/kr-aashish}{\emph{OpenAPI Docs}}}{Nov 2023 -- Dec 2023}
+          {\textbf{Aranpani} $|$ \textit{Fundraiser Management System} $|$ \href{https://github.com/kr-aashish}{OpenAPI Docs}}{Nov 2023 -- Dec 2023}
           \resumeItemListStart
             \resumeItem{Modeled project, donor \& payment endpoints, with JWT auth, serializer, Joi validation middleware layers, adopted S3 pre-signed URLs for media uploads}
             \resumeItem{Penned UTs for models \& controllers and acceptance test suites for the API endpoints, maintaining a 90\% above code coverage, with Jest and SuperTest}
