feat: update work experience with FlashMonk, RootQuotient and Amazon internship details

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -160,33 +160,38 @@
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {Electronics Company}{May 2020 -- August 2020}
-      {Software Engineer Intern}{City, State}
+      {FlashMonk}{Dec 2024 - Present}
+      {Software Development Engineer}{Bangalore}
       \resumeItemListStart
-        \resumeItem{Assisted in development of the front end of a mobile application for iOS/Android using Dart and the Flutter framework.}
-        \resumeItem{Worked with Google Firebase to manage user inputted data across multiple platforms including web and mobile apps.}
-        \resumeItem{Collaborated with team members using version control systems such as Git to organize modifications and assign tasks.}
-        \resumeItem{Utilized Android Studio as a development environment in order to visualize the application in both iOS and Android.}
-        \resumeItem{Led chapter of 30+ members to work towards goals that improve and promote community service, academics, and unity.}
+        \resumeItem{Redesigned the IMAP service, improving wait times by 16\% through event\textendash based mail fetch execution, auto\textendash retry mechanisms, and configurable domains.}
+        \resumeItem{Improved the email compose experience flow, reducing errors by 30\%, and migrated mail view APIs from a database to Elasticsearch, which reduced mailbox latency by 25\%.}
+        \resumeItem{Migrated to an Affiliate Campaign and reward system, including campaign execution, audience segmentation, and click\textendash through analytics, reducing customer engagement costs by 80\%.}
+        \resumeItem{Developed a Collections Data Ingestion Service, Collections Dimension Service, and a Collections Central Go Orchestrator, utilizing a Vector DB, ELSER, ES Mappings, and Product/Brand Semantic Search.}
+        \resumeItem{Migrated 40 microservices from CloudWatch to Last9 with OTEL, achieving a 30\% reduction in costs, right\textendash sized ES/RDS clusters, dropped a 300M index, and decommissioned 2 redundant RDS instances and 1 EFS.}
+        \resumeItem{Re\textendash engineered email info nested partitions, deleted 3 billion promotional email records from S3 and the database, and migrated Mime RDS to S3, resulting in a 30\% reduction in RDS costs.}
       \resumeItemListEnd
 
     \resumeSubheading
-      {Startup, Inc}{May 2019 -- August 2019}
-      {Front End Developer Intern}{City, State}
+      {RootQuotient}{Jun 2023 - Nov 2024}
+      {Software Development Engineer}{Chennai}
       \resumeItemListStart
-        \resumeItem{Assisted in development of the front end of a mobile application for iOS/Android using Dart and the Flutter framework.}
-        \resumeItem{Worked with Google Firebase to manage user inputted data across multiple platforms including web and mobile apps.}
-        \resumeItem{Collaborated with team members using version control systems such as Git to organize modifications and assign tasks.}
-        \resumeItem{Utilized Android Studio as a development environment in order to visualize the application in both iOS and Android.}
-        \resumeItem{Utilized Android Studio as a development environment in order to visualize the application in both iOS and Android.}
-    \resumeItemListEnd
+        \resumeItem{Created Data Service APIs to migrate a Cancer Registry System, from Oracle PL/SQL Stored Procedures \& Triggers to TS, leveraging SQL Server \& Prisma}
+        \resumeItem{Migrated .NET Web Services by creating a streaming RPC client \& SOAP API server with WSDL, in Node.js, which consumes DLLs via wrappers using FFI}
+        \resumeItem{Scheduled cron job for consuming HL7 documents, with transactional locks, and a configurable job interval, scaled to Node.js cluster threads through IPC}
+        \resumeItem{Wrote unit \& integration test suites, with a statement \& branch coverage of 85\%, optimized on\textendash premise infra requirements with Grafana's K6 perf tests}
+        \resumeItem{Configured build pipeline with coverage reporter \& static code analyzer, and release pipeline with Azure agents, deploying in Windows servers with IIS}
+      \resumeItemListEnd
 
-    \resumeSubheading{Fraternity}{Spring 2020 -- Present}{President}{University Name}
+    \resumeSubheading
+      {Amazon}{May 2022 -- Jul 2022}
+      {Software Development Engineer Intern}{Bangalore}
       \resumeItemListStart
-        \resumeItem{Achieved a 4 star fraternity ranking by the Office of Fraternity and Sorority Affairs (highest possible ranking).}
-        \resumeItem{Managed executive board of 5 members and ran weekly meetings to oversee progress in essential parts of the chapter.}
-        \resumeItem{Led chapter of 30+ members to work towards goals that improve and promote community service, academics, and unity.}
-    \resumeItemListEnd
+        \resumeItem{Designed a UUID for the CGS Dashboard versioning and improved cadence support from weekly to every second, in the Consolidation EMR's ETL job}
+        \resumeItem{Revamped the Audit Log DynamoDB to store all the metadata for the CGS Dashboard, tracking the published versions, reflecting in the CGS Version UI}
+        \resumeItem{CGS UI: Enhanced with filters, publish time, and the EMR status display}
+        \resumeItem{Reengineered the CSV View \& Diff modules to render the dashboard directly from S3, eliminating the cost of maintaining the Quarterly Competitor DDB}
+        \resumeItem{Implemented a CSV diff algorithm to compare the dashboard versions by the given primary index, providing a compact list of changes to the stakeholders}
+      \resumeItemListEnd
     
   \resumeSubHeadingListEnd
 \vspace{-16pt}
