style: replace itemize with flushleft environment for technical skills section

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -142,16 +142,18 @@
 
 %-----------PROGRAMMING SKILLS-----------
 \section{Technical Skills}
- \begin{itemize}[leftmargin=0.15in, label={}]
-    \small{\item{
-     \textbf{Programming Languages}{: C++, Java, Golang, Python, JavaScript, TypeScript} \\
-     \textbf{Markup/Query Languages}{: HTML5, CSS3, T‐SQL, pgSQL} \\
-     \textbf{Frameworks \& ORMs}{: Spring Boot, Gin, Node.js, Flask, jOOQ, Mongoose, Prisma, Gorm} \\
-     % \textbf{Libraries}{: React.js, Jest, Joi, SuperTest, Colly} \\
-     \textbf{Databases}{: Redis, MongoDB, DynamoDB, Elasticsearch, SQLite, SQL Server, PostgreSQL, pgvector} \\
-     \textbf{Cloud}{: S3, EC2, RDS, CloudWatch, Lambda, SNS, SQS, SES, ECS, Docker, IIS, Nginx, GitHub Actions, Azure CI/CD} \\
-    }}
- \end{itemize}
+\begin{flushleft}
+\setlength{\leftskip}{0.15in}
+\textbf{Programming Languages}{: C++, Java, Golang, Python, JavaScript, TypeScript} \\
+\vspace{1pt}
+\textbf{Markup/Query Languages}{: HTML5, CSS3, T‐SQL, pgSQL} \\
+\vspace{1pt}
+\textbf{Frameworks \& ORMs}{: Spring Boot, Gin, Node.js, Flask, jOOQ, Mongoose, Prisma, Gorm} \\
+\vspace{1pt}
+\textbf{Databases}{: Redis, MongoDB, DynamoDB, Elasticsearch, SQLite, SQL Server, PostgreSQL, pgvector} \\
+\vspace{1pt}
+\textbf{Cloud}{: S3, EC2, RDS, CloudWatch, Lambda, SNS, SQS, SES, ECS, Docker, IIS, Nginx, GitHub Actions, ADO}
+\end{flushleft}
  \vspace{-16pt}
 
 
