feat: add libraries section and cloud platform notes to resume

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -150,9 +150,11 @@
 \vspace{1pt}
 \textbf{Frameworks \& ORMs}{: Spring Boot, Gin, Node.js, Flask, jOOQ, Mongoose, Prisma, Gorm} \\
 \vspace{1pt}
+\textbf{Libraries}{: React.js, Jest, Joi, SuperTest, Colly, Playwright, BullMQ, Standard Template Library} \\    
 \textbf{Databases}{: Redis, MongoDB, DynamoDB, Elasticsearch, SQLite, SQL Server, PostgreSQL, pgvector} \\
 \vspace{1pt}
 \textbf{Cloud}{: S3, EC2, RDS, CloudWatch, Lambda, SNS, SQS, SES, ECS, Docker, IIS, Nginx, GitHub Actions, ADO}
+% AWS, Azure CI/CD, Deployment Groups
 \end{flushleft}
  \vspace{-16pt}
 
