Updates from Overleaf

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -148,13 +148,14 @@
 \vspace{1pt}
 \textbf{Markup/Query Languages}{: HTML5, CSS3, T‐SQL, pgSQL} \\
 \vspace{1pt}
-\textbf{Frameworks \& ORMs}{: Spring Boot, Gin, Node.js, Flask, jOOQ, Mongoose, Prisma, Gorm} \\
+\textbf{Frameworks \& ORMs}{: Spring Boot, Gin, Express.js, Flask, jOOQ, Mongoose, Prisma, Gorm} \\
 \vspace{1pt}
 \textbf{Libraries}{: React.js, Jest, Joi, SuperTest, Colly, Playwright, BullMQ, Standard Template Library} \\    
 \textbf{Databases}{: Redis, MongoDB, DynamoDB, Elasticsearch, SQLite, SQL Server, PostgreSQL, pgvector} \\
 \vspace{1pt}
-\textbf{Cloud}{: S3, EC2, RDS, CloudWatch, Lambda, SNS, SQS, SES, ECS, Docker, IIS, Nginx, GitHub Actions, ADO}
-% AWS, Azure CI/CD, Deployment Groups
+\textbf{Deployment}{: Docker, GitHub Actions, Azure Build \& Release Pipelines, Deployment Groups, IIS, Nginx, Last9} \\
+\vspace{1pt}
+\textbf{Cloud}{: AWS S3, EC2, ECS, ELB, Lambda, RDS, ElastiCache, EFS, CloudWatch, SNS, SQS, SES, Route53 }
 \end{flushleft}
  \vspace{-16pt}
 
@@ -172,6 +173,7 @@
         \resumeItem{Migrated to an Affiliate Campaign and reward system, including campaign execution, audience segmentation, and click\textendash through analytics, reducing customer engagement costs by 80\%.}
         \resumeItem{Developed a Collections Data Ingestion Service, Collections Dimension Service, and a Collections Central Go Orchestrator, utilizing a Vector DB, ELSER, ES Mappings, and Product/Brand Semantic Search.}
         \resumeItem{Migrated 40 microservices from CloudWatch to Last9 with OTEL, achieving a 30\% reduction in costs, right\textendash sized ES/RDS clusters, dropped a 300M index, and decommissioned 2 redundant RDS instances and 1 EFS.}
+        \resumeItem{Re\textendash engineered email info nested partitions, deleted 3 billion promotional email records from S3 and the database, and migrated Mime RDS to S3, resulting in a 30\% reduction in RDS costs.}
         \resumeItem{Re\textendash engineered email info nested partitions, deleted 3 billion promotional email records from S3 and the database, and migrated Mime RDS to S3, resulting in a 30\% reduction in RDS costs.}
       \resumeItemListEnd
 
