Updates from Overleaf

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -148,7 +148,7 @@
 \vspace{1pt}
 \textbf{Deployment}{: Docker, GitHub Actions, Azure Build \& Release Pipelines, Deployment Groups, IIS, Nginx, Last9} \\
 \vspace{1pt}
-\textbf{Cloud}{: AWS S3, EC2, ECS, ELB, Lambda, RDS, ElastiCache, EFS, CloudWatch, SNS, SQS, SES, IAM, Route53 }
+\textbf{Cloud}{: AWS S3, EC2, ECS, ELB, Lambda, RDS, ElastiCache, CloudWatch, SNS, SQS, SES, IAM, Route53 }
 \end{flushleft}
  \vspace{-16pt}
 
