Updates from Overleaf

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -204,8 +204,9 @@
           {\textbf{Jira 2.0} $|$ \textit{Autonomous Project Management Suite} $|$ \href{https://gist.github.com/kr-aashish/5d1b184bb082b29c0534861d07c2f25a}{\underline{View System Design}}}{Apr 2024 -- Jun 2024}
           \resumeItemListStart
             \resumeItem{Crafted a \textbf{Lambda}, which triggers upon FRD upload to \textbf{S3}, and creates user stories using \textbf{Llama3} running in an \textbf{EC2}}
-            \resumeItem{Facilitated Event Bridge to consume Slack messages periodically, then used the LLM through Flask APIs to compile task's status and assignment updates}
-            \resumeItem{Employed SES to dispatch task update approvals to stakeholders, thereupon invoking issue trackser's APIs to reflect corresponding changes in the backlog}
+            \resumeItem{Facilitated \textbf{Event Bridge} to consume Slack messages, leveraged LLMs through \textbf{Flask} APIs to compile updates on tasks}
+            \resumeItem{Employed SES to dispatch task update approvals to stakeholders, thereupon invoking issue trackser's APIs to reflect corresponding changes in the backlog}2
+            
           \resumeItemListEnd
           \vspace{-13pt}
       \resumeProjectHeading
