Updates from Overleaf

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -205,8 +205,7 @@
           \resumeItemListStart
             \resumeItem{Crafted a \textbf{Lambda}, which triggers upon FRD upload to \textbf{S3}, and creates user stories using \textbf{Llama3} running in an \textbf{EC2}}
             \resumeItem{Facilitated \textbf{Event Bridge} to consume Slack messages, leveraged LLMs through \textbf{Flask} APIs to compile updates on tasks}
-            \resumeItem{Employed SES to dispatch task update approvals to stakeholders, thereupon invoking issue trackser's APIs to reflect corresponding changes in the backlog}2
-            
+            \resumeItem{Employed \textbf{SES} to dispatch task approvals to stakeholders, then invoked issue tracker APIs to reflect changes in backlog}
           \resumeItemListEnd
           \vspace{-13pt}
       \resumeProjectHeading
