--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -211,7 +211,7 @@
       \resumeProjectHeading
           {\textbf{DeployX} $|$ \textit{UI Deployment Automation} $|$ \href{https://vercel.com/blog/behind-the-scenes-of-vercels-infrastructure}{\underline{Design Reference}}}{Jan 2024 -- Mar 2024}
           \resumeItemListStart
-            \resumeItem{Built an API server with RDS, queuing build jobs and streaming logs to Kafka for ClickHouse, accessible via polling}
+            \resumeItem{Built an API server with \textbf{RDS}, queuing build jobs and streaming logs to \textbf{Kafka} for \textbf{ClickHouse}, accessible via polling}
             \resumeItem{Provisioned an auto\textendash scaled ECS cluster, which runs an ECR image in Fargate, to process the build job for the given codebase, and dump the artifacts to S3}
             \resumeItem{Developed a reverse proxy for the deployed UI builds, to stream static assets from S3, mapping the projects's subdomain to the S3 key with an RDS query}
           \resumeItemListEnd
