Updates from Overleaf

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -213,7 +213,7 @@
           \resumeItemListStart
             \resumeItem{Built an API server with \textbf{RDS}, queuing build jobs and streaming logs to \textbf{Kafka} for \textbf{ClickHouse}, accessible via polling}
             \resumeItem{Provisioned an \textbf{ECS} cluster which runs \textbf{ECR} images in \textbf{Fargate}, to process the build jobs and dump the artifacts to \textbf{S3}}
-            \resumeItem{Built a \textbf{reverse proxy} for UI builds, streaming assets from \textbf{S3}, mapping project's subdomains to S3 keys via RDS query}
+            \resumeItem{Developed a \textbf{reverse proxy} for UI builds, streaming assets from \textbf{S3}, mapping subdomains to S3 keys using RDS query}
           \resumeItemListEnd
           \vspace{-13pt}
       \resumeProjectHeading
