--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -219,7 +219,7 @@
       \resumeProjectHeading
           {\textbf{Aranpani} $|$ \textit{Fundraiser Management System} $|$ \href{https://kr-aashish.github.io/aranpani-api-docs}{\underline{OpenAPI Docs}}}{Nov 2023 -- Dec 2023}
           \resumeItemListStart
-            \resumeItem{Modeled project, donor \& payment endpoints, with JWT auth, serializer, Joi validation middleware layers, adopted S3 pre\textendash signed URLs for media uploads}
+            \resumeItem{Modeled project, donor \& payment endpoints with \textbf{JWT} auth, Joi validation, and S3 presigned URLs for media uploads}
             \resumeItem{Penned UTs for models \& controllers and acceptance test suites for the API endpoints, maintaining a 90\% above code coverage, with Jest and SuperTest}
             \resumeItem{Ensured application's reliability with MongoDB Replica Sets, in PM2 cluster mode with APM, leveraging Nginx as a web server and Route53 name server}
           \resumeItemListEnd
