Updates from Overleaf

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -220,7 +220,7 @@
           {\textbf{Aranpani} $|$ \textit{Fundraiser Management System} $|$ \href{https://kr-aashish.github.io/aranpani-api-docs}{\underline{OpenAPI Docs}}}{Nov 2023 -- Dec 2023}
           \resumeItemListStart
             \resumeItem{Modeled project, donor \& payment endpoints with \textbf{JWT} auth, Joi validation, and S3 presigned URLs for media uploads}
-            \resumeItem{Penned \textbf{UTs} and \textbf{acceptance test} suites for the endpoints, maintaining \textbf{90\%+} code coverage, with Jest and SuperTest}
+            \resumeItem{Penned \textbf{UTs} and \textbf{acceptance test} suites for A endpoints, maintaining \textbf{90\%+} code coverage, with Jest and SuperTest}
             \resumeItem{Ensured application's reliability with MongoDB Replica Sets, in PM2 cluster mode with APM, leveraging Nginx as a web server and Route53 name server}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
